fix position mobile

--- a/public/assets/css/autodetect/table.css
+++ b/public/assets/css/autodetect/table.css
@@ -811,7 +811,7 @@ input[type=checkbox] {
   font-size: 15px !important;
 }
 .mobleprevnext{
-  top: 165px !important;
+  top: 262px !important;
 }
 .updata-form-analysis{
   font-family: system-ui !important;
