--- a/public/assets/css/responsive/filter.css
+++ b/public/assets/css/responsive/filter.css
@@ -43,7 +43,7 @@
         position: absolute;
         right: 0;
         margin-right: 16px;
-        top: 7px;
+        top: 90px;
         margin-top: 5px;
         /* z-index: 102; */
     }
